samples/_failures_safe/1761800680_fc08c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c2336bc.c: In function ‘main’:
./samples/SAFE/__tmp_5c2336bc.c:151:13: error: expected identifier at end of input
  151 |             mat2.
      |             ^~~~
./samples/SAFE/__tmp_5c2336bc.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c2336bc.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c2336bc.c:151:13: error: expected declaration or statement at end of input
